Improved api error handling and docs
- Added error definitions to swagger
- Rewritten error middleware to match the docs

JIRA: WLP-1078
